# Echo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PR_DESCRIPTION.md  README.md  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  playwright.config.ts  server.js  tsconfig.base.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/src/: app.module.ts  app.test.ts  app.ts  auth.ts  documents.ts  http.ts  main.ts  rest-routes.ts  server.ts  status.ts  temporal.ts
apps/api/test/: helpers.ts  parity.test.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/public/: manifest.webmanifest  sw.js
apps/web/src/: main.tsx  reset.css  router.tsx
apps/worker/: Dockerfile  package.json  tsconfig.json
apps/worker/src/: activities.ts  jobs.ts  main.ts  processor.ts  queue.ts  register-schedules.ts  worker.ts  workflows.test.ts  workflows.ts
apps/worker/test/: smoke.test.ts
crates/echo-api/: Cargo.toml
crates/echo-api/src/: lib.rs  main.rs
crates/echo-application/: Cargo.toml
crates/echo-application/src/: answer_prompt.rs  auth.rs  company_resolve.rs  from_db.rs  lib.rs  model_gateway.rs  report.rs  research.rs  watch_rules.rs
crates/echo-config/: Cargo.toml
crates/echo-config/src/: lib.rs
crates/echo-contracts/: Cargo.toml
crates/echo-contracts/src/: lib.rs
crates/echo-data/: Cargo.toml
crates/echo-data/src/: backup.rs  calendar.rs  email.rs  evidence.rs  filings.rs  fmp.rs  fundamentals.rs  historical.rs  hk_financials.rs  hkex.rs  lib.rs  market.rs  peers.rs  quality.rs  quote.rs  router.rs  search.rs
crates/echo-db/: Cargo.toml
crates/echo-db/src/: lib.rs  migrations.rs
crates/echo-db/src/repositories/: auth.rs  mod.rs  operations.rs  rate_limit.rs  workspace.rs
crates/echo-domain/: Cargo.toml
crates/echo-domain/src/: company_aliases.rs  company_identity.rs  derivations.rs  fact_guard.rs  intent.rs  lib.rs  valuation.rs  watch_rules.rs
crates/echo-domain/tests/: intent_routing_corpus.rs
crates/echo-e2e/: Cargo.toml
crates/echo-e2e/src/: lib.rs
crates/echo-observability/: Cargo.toml
crates/echo-observability/src/: lib.rs
crates/echo-web/: Cargo.toml  Trunk.toml  index.html  style.css
crates/echo-web/src/: api.rs  compare.rs  lib.rs  markdown.rs  profiles.rs  research.rs  workspace.rs
crates/echo-worker/: Cargo.toml
crates/echo-worker/src/: activities.rs  main.rs  schedule.rs
crates/finance-core/: Cargo.toml
crates/finance-core/src/: lib.rs
deploy/: Caddyfile  Caddyfile.ip-only  echo-research.service
docker/: echo-api.Dockerfile  echo-web.Dockerfile  echo-worker.Dockerfile
docs/: AI_INTEGRATION.md  ARCHITECTURE.md  DATABASE.md  DATA_PIPELINE.md  DATA_SOURCE_STRATEGY.md  DEPLOY.md  GITHUB_WORKFLOW.md  HANDOFF.md  IMPROVEMENT_PLAN.md  INTERACTION_MODEL_REFACTOR_2026-06-28.md  MASTER_PLAN_2026-07-02.md  NEXT_PLAN_2026-07-03.md  PLAN.md  PLATFORM_BENCHMARK.md  PRD.md  PROJECT_PLAN_2026-06-28.md  README.md  REFACTOR_PROPOSAL.md  RUST_REFACTOR_HANDOFF.md  hk-financial-ingest.md  rust-parity-matrix.md  ui-design-system.md
docs/adr/: 0001-data-plane-adapter-matrix.md  0002-filings-pipelines-into-worker.md  0003-hono-trpc-temporal-pivot.md
docs/architecture/: conversation-research-engine.md  repository-layout.md  system-overview.md
docs/qa/: 2026-07-17-agent-qa.md  2026-07-19-agent-qa.md  README.md  agent-qa-baseline.json  methodology.md
infra/terraform/: main.tf  outputs.tf  variables.tf  versions.tf
migrations/: 0002_tenant_rls.sql  0003_auth_session_boundary.sql  0004_rate_limit_buckets.sql  0005_research_snapshots_daily_unique.sql  0008_p4_enhancements.sql  0010_drop_legacy_instruments.sql  0011_company_filings.sql  0012_scheduler_lease.sql  0013_hk_financial_units.sql
migrations/meta/: 0000_snapshot.json
scripts/: backfill-watch-rules.js  canary.js  clean-portrait-noise.js  clean-thesis-fragments.js  cn-coverage.js  coverage.js  doctor.js  extract_pdf_text.py  factguard-sample.js  hk-coverage.js  manage-users.js  restart-dev.command  seed-db.js  启动 Echo.command
scripts/document-processing/: extract_pdf_text.py
scripts/quality/: check-dead-request-fields.mjs  check-frozen-tables.mjs  check-retired-stack.mjs  load-test-scenarios.mjs  load-test.mjs
scripts/setup/: reset-owner.ts
src/: app.js  data.js  documentParser.js  filingData.js  financialData.js  fmpClient.js  market.js  marketData.js  modelClient.js  newsData.js  productStrategy.js  prompts.js  secFilings.js  styles.css
src/agent/: agent.js  index.js  provider.js  tool.js  toolRegistry.js
src/data/: cnStocks.js  hkStocks.js
src/db/: index.js  migrate.js
src/server/: types.js
src/styles/: 00-foundation.css  01-shell.css  02-workspace.css  03-research.css  04-components.css  05-pages.css  06-watch.css  07-brand.css  08-portfolio.css  09-auth.css
src/ui/: api.js  beta.js  boot.js  components.js  format.js  intentPatterns.js  login.js  markdown.js  notifications.js  portfolio.js  portfolioPage.js  research.js  resolve.js  settings.js  shell.js  sidebar.js  state.js  watch.js
tests/: README.md  authentication.test.mjs  cn-valuation.test.mjs  company-comparison-planner.test.mjs  company-portraits.test.mjs  conversation-grouping.test.mjs  core.test.mjs  data-health.test.mjs  discovery.test.mjs  earnings-review.test.mjs  factguard-backup.test.mjs  falsifier-rules.test.mjs  financial-trends.test.mjs  historical-valuation.test.mjs  hk-filings.test.mjs  hk-valuation.test.mjs  investor-question-matrix.test.mjs  notifications-scheduler.test.mjs  notifications.mjs  onboarding-preferences.test.mjs  phase-b1.mjs  phase-b3.mjs  phase-b4.mjs  phase-b5.mjs  phase-b6.mjs  phase-b7.mjs  phase-cn1.mjs  phase-cn2.mjs  phase-cn3.mjs  phase-d2.mjs  phase-e4.mjs  phase-ea0.mjs  phase-ea1.mjs  phase-ea2.mjs  phase-ea3.mjs  phase-ea4.mjs  phase-ea5-1.mjs  phase-f1.mjs  phase-f2.mjs  phase-f3.mjs  (+35 more)
tests/e2e/: core-flow.spec.ts  setup.ts
xtask/: Cargo.toml
xtask/src/: main.rs
(+211 files in other folders)
