[workspace]
resolver = "3"
members = [
    # Cargo 单入口工程任务（check / web / e2e / migrate / release）。
    "xtask",
    # 金融定点算术内核（Money / Decimal，二进制浮点只允许出现在展示边界）
    "crates/finance-core",
    # HTTP 与 WASM 共用的 serde 契约（请求/响应只定义一次）。
    "crates/echo-contracts",
    # 服务端环境配置单一入口；业务 crate 不直接散读环境变量。
    "crates/echo-config",
    # Rust 原生日志与追踪初始化。
    "crates/echo-observability",
    # 纯领域逻辑：估值、数字护栏、意图路由与财务衍生。
    "crates/echo-domain",
    # 用例编排：研究链路（取数 → 估值 → 作答 → 护栏 → 落库）
    "crates/echo-application",
    # 持久化与租户 RLS（sqlx + PostgreSQL）
    "crates/echo-db",
    # 数据源授权、质量门、熔断与外部适配器；所有 HTTP 取数只从这里出入口。
    "crates/echo-data",
    # HTTP/SSE 边界（axum）与认证路由。
    "crates/echo-api",
    # 后台工作流（业绩复盘、证伪巡检）与可恢复调度。
    "crates/echo-worker",
    # 前端（Leptos/WASM）。
    "crates/echo-web",
    # 浏览器验收：Rust WebDriver 客户端，测试真实 Leptos 页面和核心交互。
    "crates/echo-e2e",
]

[workspace.package]
edition = "2024"
license = "UNLICENSED"
rust-version = "1.85"
authors = ["Echo Research"]

# 集中依赖底账：版本只在这里钉一次，各 crate 用 `dep.workspace = true` 继承，
# 避免同一依赖在多个 crate 里漂移出不同版本（工作区级单一事实源）。
[workspace.dependencies]
echo-finance-core = { path = "crates/finance-core" }
echo-contracts = { path = "crates/echo-contracts" }
echo-config = { path = "crates/echo-config" }
echo-observability = { path = "crates/echo-observability" }
echo-domain = { path = "crates/echo-domain" }
echo-application = { path = "crates/echo-application" }
echo-db = { path = "crates/echo-db" }
echo-data = { path = "crates/echo-data" }

rust_decimal = { version = "1.36", default-features = false, features = ["serde", "std"] }
rust_decimal_macros = "1.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
futures-util = { version = "0.3", default-features = false }
tracing = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
base64 = "0.22"
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
subtle = "2"
uuid = { version = "1", features = ["v4"] }
# 模型网关的 HTTP 客户端：rustls 与 sqlx 的 tls-rustls 对齐（不引 OpenSSL）；
# 只用 json + 流式 body，OpenAI 兼容协议（DeepSeek/OpenAI）。
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
] }
url = "2"
fantoccini = { version = "0.22", default-features = false, features = ["rustls-tls"] }
# 简报邮件通道：tokio1 异步 SMTP + rustls，与项目其余 TLS 客户端一致（不引 OpenSSL）。
lettre = { version = "0.11", default-features = false, features = [
    "tokio1",
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
