[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Cargo-native development and release tasks for Echo Research"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
echo-application.workspace = true
echo-data.workspace = true
echo-db.workspace = true
serde_json.workspace = true
tokio.workspace = true
