[package]
name = "echo-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "HTTP/SSE boundary (axum) — replaces the Hono+tRPC /api surface"

[[bin]]
name = "echo-api"
path = "src/main.rs"

[dependencies]
echo-application.workspace = true
echo-domain.workspace = true
echo-db.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum = "0.7"
