[package]
name = "echo-application"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Use-case orchestration for the research pipeline"

[dependencies]
echo-domain.workspace = true
echo-finance-core.workspace = true
rust_decimal.workspace = true
serde.workspace = true
