[package]
name = "echo-contracts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared serde contracts for the Echo axum API and Leptos/WASM client"

[dependencies]
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
