[package]
name = "echo-observability"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Rust-native tracing initialization for Echo services"

[dependencies]
tracing.workspace = true
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
    "json",
] }
