[package]
name = "echo-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Background workflows (earnings review, falsifier patrol) — replaces the Temporal worker"

[[bin]]
name = "echo-worker"
path = "src/main.rs"

[dependencies]
echo-domain.workspace = true
echo-db.workspace = true
tokio.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# cron 表达式解析与下一触发时刻计算——不手搓 cron 解析器。
cron = "0.12"
